src/objects/HR_Task__c.object
<CustomObject>
    <description>Allows you to create packages of tasks.  The parent task will have a null HR_Parent_Task field, while child instances will have a value on that field.  Some wanted to have two separate tables, i.e. Moments and Moments Tasks w/o a self referencing capability, this would limit the Moments to have only a single level of depth.  Creating a more flexible and extensible structure allows SEs of various industries to create multiple levels of depth should the need arise in their implementations.</description>
    <fields>
        <fullName>Actual_Completion_Date__c</fullName>
        <label>Actual Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Start_Date__c</fullName>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HR_Contact_Job__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>HR Contact Job</label>
        <referenceTo>HR_Contact_Job__c</referenceTo>
        <relationshipName>HR_Moments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HR_Parent_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HR Parent Task</label>
        <referenceTo>HR_Task__c</referenceTo>
        <relationshipLabel>HR Tasks</relationshipLabel>
        <relationshipName>HR_Parent_Task</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Completion_Date__c</fullName>
        <label>Target Completion Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Start_Date__c</fullName>
        <label>Target Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>HR Task</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>HR Task</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HR Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>